--- a/src/sections/Work/projects.json
+++ b/src/sections/Work/projects.json
@@ -3,24 +3,24 @@
         "title": "YANTRA | WINDOWS",
         "tags": ["RESEARCH", "DESIGN", "DEVELOPEMENT"],
         "videoTitle": "yantra",
-        "caseStudy": "yantra"
+        "caseStudy": "https://www.yantraindia.com/"
     },
     {
         "title": "PROATHLETES | AISENT",
         "tags": ["RESEARCH", "DESIGN", "DEVELOPEMENT"],
         "videoTitle": "aisent",
-        "caseStudy": "yantra"
+        "caseStudy": "https://aisent.netlify.app/"
     },
     {
         "title": "ALVIN LUCIEN | VIDEO EDITOR PORTFOLIO",
         "tags": ["RESEARCH", "DESIGN", "DEVELOPEMENT"],
         "videoTitle": "alvin",
-        "caseStudy": "aisent"
+        "caseStudy": "https://alvinlucien.netlify.app/"
     },
     {
         "title": "INTERIOR DESIGNER | WEB DESIGN CONCEPT",
         "tags": ["RESEARCH", "DESIGN"],
         "videoTitle": "interior",
-        "caseStudy": "aisent"
+        "caseStudy": "https://www.figma.com/file/nJMdu6NpByYdyvFolGNPaB/SHUBH-Designs?type=design&node-id=0%3A1&mode=design&t=u0vq7"
     }
 ]
